--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "BSD-2-Clause",
   "dependencies": {
     "express": "~4.13.3",
-    "handlebars": "~3.0.3"
+    "handlebars": "~3.0.3",
+    "express-flash": "0.0.2"
   }
 }
